clusters/home/default/dashy/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashy
  namespace: default
  labels:
    app.kubernetes.io/name: dashy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dashy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dashy
    spec:
      containers:
      - name: dashy
        image: lissy93/dashy:latest
        volumeMounts:
        - name: config
          mountPath: "/app/public"
          subpath: "public"
          readOnly: false
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: dashy
