clusters/home/default/dashy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dashy
  namespace: default
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 80
  selector:
    name: dashy
